fix some compile errors, improve ReportServiceImp/ReportController